--- a/.config/systemd/user/emacs.service
+++ b/.config/systemd/user/emacs.service
@@ -1,5 +1,6 @@
 [Unit]
 Description=Emacs: the extensible, self-documenting text editor
+ConditionPathExists=!%h/.emacs.d/.emacs.desktop.lock
 
 [Service]
 Type=forking
